# BeamModeBot

./: .gitignore  README.md  pyproject.toml
src/beammodebot/: __init__.py  config.py  main.py  pseudorand.py  random_func.py
